@@ -1,3 +1,11 @@
+2007-09-03  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
+	Automatically save *.aria2 control file of http/ftp download in every
+	60 seconds.
+	* src/AutoSaveCommand.{h, cc}: New class.
+	* src/TimeBasedCommand.{h, cc}: New class.
+	* src/DownloadEngineFactory.cc (newConsoleEngine)
+
 2007-09-02  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
 	Now *.aria2 contorol file is first saved to *.aria2__temp and if
